@@ -39,6 +39,7 @@
  */
 package co.elastic.apm.agent.profiler.asyncprofiler;
 
+import co.elastic.apm.agent.profiler.ProfilingConfiguration;
 import co.elastic.apm.agent.util.IOUtils;
 
 import javax.annotation.Nullable;
@@ -48,7 +49,7 @@ import java.io.IOException;
 /**
  * Java API for in-process profiling. Serves as a wrapper around
  * async-profiler native library. This class is a singleton.
- * The first call to {@link #getInstance()} initiates loading of
+ * The first call to {@link #getInstance(ProfilingConfiguration config)} initiates loading of
  * libasyncProfiler.so.
  * <p>
  * This is based on https://github.com/jvm-profiling-tools/async-profiler/blob/master/src/java/one/profiler/AsyncProfiler.java,
@@ -64,14 +65,20 @@ public class AsyncProfiler {
     private AsyncProfiler() {
     }
 
-    public static AsyncProfiler getInstance() {
+    public static AsyncProfiler getInstance(ProfilingConfiguration config) {
         AsyncProfiler result = AsyncProfiler.instance;
         if (result != null) {
             return result;
         }
         synchronized (AsyncProfiler.class) {
             if (instance == null) {
-                loadNativeLibrary();
+                try {
+                    loadNativeLibrary(config.getProfilerLibDirectory());
+                } catch (UnsatisfiedLinkError e) {
+                    throw new IllegalStateException(String.format("Is is likely that %s is not an executable location. Consider setting " +
+                        "the profiling_inferred_spans_lib_directory property to a directory on a partition that allows execution",
+                        config.getProfilerLibDirectory()), e);
+                }
 
                 instance = new AsyncProfiler();
             }
@@ -79,9 +86,10 @@ public class AsyncProfiler {
         }
     }
 
-    private static void loadNativeLibrary() {
+    private static void loadNativeLibrary(String libraryDirectory) {
         String libraryName = getLibraryFileName();
-        File file = IOUtils.exportResourceToTemp("asyncprofiler/" + libraryName + ".so", libraryName, ".so");
+        File file = IOUtils.exportResourceToDirectory("asyncprofiler/" + libraryName + ".so", libraryDirectory,
+            libraryName, ".so");
         System.load(file.getAbsolutePath());
     }
 
